2005-11-17 - johan
Made it possible to force call to the fVDI mouse movement vector.
Fix for vbl handler install/remove.

2005-11-15 - johan
Fixed bug that made it impossible to do operations on non-fVDI handles
if running in standalone mode.
Partially implemented vq_devinfo.
Debug messages added for non-fVDI workstation open.
Made it possible to force VDI fallback (old VDI workstation open).

2005-11-09 - johan
The Atari character set is now mapped to Unicode for TrueType fonts.
Significant optimizations for TrueType rendering from cached bitmaps.
Check for other GDOS is now always done at startup.
Disabled vector font size debug code.

2005-09-24 - johan
The 16 bit driver can now be built using gcc.

2005-09-20 - johan
The ARAnyM driver now queries the host about the type of mouse cursor
handling to use, and informs the engine if the host takes care of moves.

2005-08-14 - johan
Some debug code addded to text functions to try to figure out what was
going wrong with the old vector font size limitation.
	
2005-08-12 - johan
Made it possible for C functions to call with separate stack.
Converted a bunch of text functions to C.

2005-08-10 - johan
All vq_extnd variants converted to C.

2005-08-09 - johan
All palette handling converted to C.

2005-08-04 - johan
Partial implementation of v_getbitmap_info.
Implemented vs_ctab and vdi<->index conversions.
Added text acceleration support to ARAnyM driver.

2005-08-02 - johan
Fixed problem with large number of open virtual workstations.
Fake implementations of a number of vector font functions.
Some bug fixes and minor improvements.
	
2005-07-26 - johan
New memory allocation algorithm that requests largish blocks from the OS
at once, splits them into pieces to satisfy requests, and keeps released
blocks around for reuse.
FreeType support upgraded for version 2.1.10.
Change to allow FreeType font files to be kept open for longer intervals
under some circumstances.
Partial vr_transfer_bits implementation.